# wgrok

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  THREAT_MODEL.md  asyncapi.yaml  renovate.json
.github/: dependabot.yml
.github/workflows/: codeql.yml  dependency-review.yml  publish.yml
.plan/: concept.txt
docs/: encryption-post-quantum.md
go/: .env.example  allowlist.go  allowlist_test.go  codec.go  codec_test.go  config.go  config_test.go  discord.go  discord_listener.go  discord_test.go  echo_bot.go  echo_bot_test.go  go.mod  go.sum  helpers_test.go  irc.go  irc_listener.go  irc_test.go  listener.go  listener_test.go  logging.go  logging_test.go  platform.go  platform_test.go  protocol.go  protocol_test.go  receiver.go  receiver_test.go  router_bot.go  router_bot_test.go  sender.go  sender_test.go  slack.go  slack_listener.go  slack_test.go  webex.go  webex_listener.go  webex_test.go
go/cmd/echobot/: main.go
go/cmd/receiver/: main.go
go/cmd/routerbot/: main.go
go/cmd/sender/: main.go
python/: .env.example  README.md  pyproject.toml  run_echobot.py  run_receiver.py  run_routerbot.py  run_sender.py
python/src/wgrok/: __init__.py  allowlist.py  codec.py  config.py  discord.py  echo_bot.py  irc.py  listener.py  logging.py  platform.py  protocol.py  receiver.py  router_bot.py  sender.py  slack.py  webex.py
python/tests/: conftest.py  test_allowlist.py  test_codec.py  test_config.py  test_discord.py  test_echo_bot.py  test_irc.py  test_listener.py  test_logging.py  test_platform.py  test_protocol.py  test_receiver.py  test_router_bot.py  test_sender.py  test_slack.py  test_webex.py
python/tests_e2e/: conftest.py  test_full_flow.py  test_webex_limit.py
rust/: .env.example  Cargo.toml  README.md
rust/src/: allowlist.rs  codec.rs  config.rs  discord.rs  echo_bot.rs  irc.rs  lib.rs  listener.rs  logging.rs  platform.rs  protocol.rs  receiver.rs  router_bot.rs  sender.rs  slack.rs  webex.rs
rust/tests/: allowlist_test.rs  codec_test.rs  config_test.rs  discord_test.rs  echo_bot_test.rs  irc_test.rs  listener_test.rs  logging_test.rs  platform_test.rs  protocol_test.rs  receiver_test.rs  router_bot_test.rs  sender_test.rs  slack_test.rs  webex_http_test.rs  webex_test.rs
tests/: allowlist_cases.json  codec_cases.json  config_cases.json  discord_cases.json  echo_bot_cases.json  irc_cases.json  platform_dispatch_cases.json  protocol_cases.json  receiver_cases.json  router_bot_cases.json  run_all.sh  sender_cases.json  slack_cases.json  strip_mention_cases.json  webex_cases.json
ts/: .env.example  LICENSE  README.md  eslint.config.js  jest.config.cjs  package-lock.json  package.json  tsconfig.json
ts/src/: allowlist.ts  codec.ts  config.ts  discord.ts  echo-bot.ts  index.ts  irc.ts  listener.ts  logging.ts  platform.ts  protocol.ts  receiver.ts  router-bot.ts  sender.ts  slack.ts  webex.ts
ts/tests/: allowlist.test.ts  codec.test.ts  config.test.ts  discord.test.ts  echo-bot.test.ts  helpers.ts  irc.test.ts  listener.test.ts  logging.test.ts  platform.test.ts  protocol.test.ts  receiver.test.ts  router-bot.test.ts  sender.test.ts  slack.test.ts  webex-http.test.ts  webex.test.ts
