[package]
name = "wgrok"
version = "0.1.0"
edition = "2021"
description = "ngrok clone using Webex API as a message bus"
rust-version = "1.75"

[dependencies]
webex-message-handler = { git = "https://github.com/3rg0n/webex-message-handler" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
dotenvy = "0.15"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
