[package]
name = "wgrok"
version = "1.2.0"
edition = "2024"
description = "Message bus protocol over social messaging platforms"
rust-version = "1.85"
license = "MIT"
authors = ["3rg0n"]
repository = "https://github.com/3rg0n/wgrok"
keywords = ["webex", "slack", "discord", "message-bus"]
categories = ["network-programming"]

[dependencies]
webex-message-handler = "0.6.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
native-tls = "0.2"
tokio-native-tls = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1.0"
base64 = "0.22"
tracing = "0.1"
dotenvy = "0.15"
async-trait = "0.1"
aes-gcm = "0.10"
rand = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
